03.wordpress-deployment.yaml
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: wordpress-hpa
spec:
  maxReplicas: 10
  minReplicas: 2
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: wordpress-deployment
  behavior:
    scaleUp:
      policies:
        - type: Percent
          value: 10
          periodSeconds: 1 # check 주기
    scaleDown:
      stabilizationWindowSeconds: 60 # wait 3m
      policies:
        - type: Pods
          value: 1
          periodSeconds: 60
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 16 # scale up 기준 값.
--- # HPA
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    # deployment distribution
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: hemgistry.azurecr.io/hampress
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "900m"
              # hpa resourceku
          volumeMounts:
            - name: volume # azurefile, volume
              mountPath: /var/www/html
              # pvc mount
      volumes:
        - name: volume # azurefile, volume
          persistentVolumeClaim:
            claimName: azure-hamtorage # PVC name
