http-tomcat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
        - image: httpd
          name: http
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-tomcat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tom
  template:
    metadata:
      labels:
        app: tom
    spec:
      containers:
        - image: tomcat
          name: tomcat
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  type: ClusterIP
  selector:
    app: http
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tom-service
spec:
  selector:
    app: tom
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
