aks-ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true" # http -> https
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "hamcert" # ssl deploy
spec:
  tls:
    - hosts:
        - hemmu.xyz
      secretName: hem-tls
  rules:
    - host: hemmu.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80 # in port
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
